--- a/src/components/navbars/BasicNavbar.astro
+++ b/src/components/navbars/BasicNavbar.astro
@@ -45,7 +45,7 @@ import Logo from "../Logo.astro";
 </script>
 <style>
   header{
-    @apply fixed z-40 flex-none mx-auto w-full bg-secondary/90;
+    @apply fixed z-40 flex-none mx-auto w-full bg-white/90;
     @apply  dark:bg-slate-900 backdrop-blur-sm border-b dark:border-b-0;
   }
   .header-container {
