--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,31 +1,34 @@
 ---
-import Layout from '~/layouts/Layout.astro';
+import Layout from "~/layouts/Layout.astro";
 
-import BasicFeatures from '~/components/features/BasicFeatures.astro';
-import StepsFeatures from '~/components/features/StepsFeatures.astro';
-import HeroWithImage from '~/components/heros/HeroWithImage.astro';
-import CenteredHero from '~/components/heros/CenteredHero.astro';
-import CarouselWithButtons from '~/components/carousels/CarouselWithButtons.astro';
+import BasicFeatures from "~/components/features/BasicFeatures.astro";
+import HeroWithImage from "~/components/heros/HeroWithImage.astro";
+import CarouselWithButtons from "~/components/carousels/CarouselWithButtons.astro";
 const HeroWithImageText = ` 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-`
+We are a company made up of a team with extensive experience with the objective of importing, distributing and exporting high quality products, based on the demands of the global market. <br/><br/>
+
+We have several suppliers located at strategic points along the Venezuelan coasts and in South America, which are highly equipped to collect, transform, freeze and pack our products, respecting the principles of sustainability of the different marine resources that we process, applying strict quality standards. 
+`;
 ---
 
-<Layout title="Astro + Tailwind CSS" description="page desc">
-	<main>
-		<CarouselWithButtons />
-		<HeroWithImage title="Hi" text={HeroWithImageText} image="/images/hero.webp"/>
-		<div class="divider"></div> 
-		<BasicFeatures />
-		<div class="divider divide-secondary"></div> 
-		<StepsFeatures />
-		<div class="divider"></div> 
-		<CenteredHero title="Hi you all" />
-	</main>
+<Layout
+  title="Seafood Depot"
+  description="Commercialization of hydrobiological products. Importers, distributors and exporters of high quality products, based on the demands of the global market"
+>
+  <main>
+    <CarouselWithButtons />
+    <HeroWithImage
+      id="whatwedo"
+      title="We are merchants of hydrobiological products"
+      text={HeroWithImageText}
+      image="/images/hero.webp"
+    />
+    <BasicFeatures idA="company" idB="products" />
+    <div class="divider"></div>
+  </main>
 </Layout>
 <style>
-	main {
-		@apply relative;
-	}
+  main {
+    @apply relative;
+  }
 </style>
