--- a/src/components/cards/BasicCard.astro
+++ b/src/components/cards/BasicCard.astro
@@ -1,26 +1,26 @@
 ---
 export interface Props {
-  baslik: string;
-  metin?: string;
+  titulo: string;
+  descripcion?: string;
   resim?: string;
   link?: string;
 }
-const { baslik = 'Hello', metin , resim, link = "#" } = Astro.props as Props;
+const { titulo, descripcion , resim, link } = Astro.props as Props;
 ---
 
 
-<div class="card ">
-  <figure><img src={resim} alt={baslik} /></figure>
+<div class="card">
+  <figure><img src={resim} alt={titulo} /></figure>
   <div class="card-body">
-    <h2 class="card-title">{baslik}</h2>
-    <p>{metin}</p>
+    <h2 class="card-title">{titulo}</h2>
+    <p>{descripcion}</p>
     <div class="card-actions justify-end">
-      <a class="btn btn-primary" href={link} >Detay</a>
+      <a class="btn btn-primary" href={link} >more</a>
     </div>
   </div>
 </div>
 <style>
   .card {
-    @apply  shadow-xl  relative flex flex-col ;
+    @apply shadow-xl relative flex flex-col;
   }
 </style>
