--- a/src/components/footers/BasicFooter.astro
+++ b/src/components/footers/BasicFooter.astro
@@ -1,118 +1,79 @@
 ---
-  import { Icon } from "astro-icon";
-  const { } = Astro.props;
-  import settings from '~/config/settings';
-  const year = new Date().getFullYear();
+import { Icon } from "astro-icon";
+
+export interface Props {
+  idA?: string;
+
+}
+
+const idA = Astro.props.idA;
+
+import settings from "~/config/settings";
+const year = new Date().getFullYear();
 ---
 
-<footer >
-    <div class="ilk-satir">
-      <div class="sm:col-span-12 lg:col-span-3">
-        <div class="mb-2"><a class="inline-block font-bold" aria-label={settings.name} href="/">{settings.name}</a></div>
-        <div class="text-sm text-gray-600">
-          <a class="text-gray-600 hover:text-gray-700 hover:underline transition duration-150 ease-in-out"
-            href="/">Terms</a> ·
-          <a class="text-gray-600 hover:text-gray-700 hover:underline transition duration-150 ease-in-out"
-            href="/">Privacy Policy</a>
-        </div>
+<footer>
+  <div class="ilk-satir">
+    <div class="sm:col-span-12 lg:col-span-3">
+      <div id={idA} class="mb-2">
+        <a class="inline-block font-bold" aria-label={settings.name} href="/"
+          >{settings.name}
+        </a>
       </div>
-      <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
-        <h6 class="text-gray-800 dark:text-gray-500 font-medium mb-2">Products</h6>
-        <ul class="text-sm">
-          <li class="mb-2">
-            <a class="menu-item" href="/">Web
-              Studio</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">DynamicBox
-              Flex</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Programming
-              Forms</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item " href="/">Integrations</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Command-line</a>
-          </li>
-        </ul>
-      </div>
-      <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
-        <h6 class="text-gray-800 dark:text-gray-500 font-medium mb-2">Resources</h6>
-        <ul class="text-sm">
-          <li class="mb-2">
-            <a class="menu-item" href="/">Documentation</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Tutorials &amp;
-              Guides</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Blog</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Support Center</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Partners</a>
-          </li>
-        </ul>
-      </div>
-      <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
-        <h6 class="text-gray-800 dark:text-gray-500 font-medium mb-2">Company</h6>
-        <ul class="text-sm">
-          <li class="mb-2">
-            <a class="menu-item" href="/">Home</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">About us</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Company values</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Pricing</a>
-          </li>
-          <li class="mb-2">
-            <a class="menu-item" href="/">Privacy Policy</a>
-          </li>
-        </ul>
-      </div>
-      <div class="sm:col-span-6 md:col-span-3 lg:col-span-3">
-        <h6 class="text-gray-800 dark:text-gray-500 font-medium mb-2">Subscribe</h6>
-        <p class="text-sm text-gray-600 mb-4">Get the latest news and articles to your inbox every month.</p>
-        <form>
-          <div class="flex flex-wrap mb-4">
-            <div class="w-full">
-              <label class="block text-sm sr-only" for="newsletter">Email</label>
-              <div class="relative flex items-center max-w-xs">
-                <input id="newsletter" type="email" placeholder="Your email">
-                <button type="submit" class="absolute inset-0 left-auto" aria-label="Subscribe">
-                  <span class="absolute inset-0 right-auto w-px -ml-px my-2 bg-gray-300 dark:bg-slate-600"
-                    aria-hidden="true"></span>
-                    <Icon name="bi:arrow-right"  />
-                </button>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-    <div class="md:flex md:items-center md:justify-between py-4 md:py-8">
-
-      <div class="text-sm text-gray-700 mr-4 dark:text-slate-400">
-        Made by <a class="text-success  hover:underline" href="https://cemkaan.com/" target="_blank" >Cem Kaan</a>
-        <p>
-          Copyright  © {settings.name} {year}
+      <div class="text-sm text-gray-600">
+        <p class="text-gray-600 transition duration-150 ease-in-out">
+          7520 NW 104th Ave
+        </p>
+        <p class="text-gray-600 transition duration-150 ease-in-out">
+          Ste A103 PMB 4222
+        </p>
+        <p class="text-gray-600 transition duration-150 ease-in-out">
+          Doral, FL 33178-3374
+        </p>
+        <p class="flex leading-6">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M4.05 21q-.45 0-.75-.3t-.3-.75V15.9q0-.35.225-.613t.575-.337l3.45-.7q.35-.05.713.063t.587.337L10.9 17q1.9-1.15 3.475-2.725T17 10.9l-2.4-2.45q-.225-.225-.288-.513T14.3 7.3l.65-3.5q.05-.35.325-.575T15.9 3h4.05q.45 0 .75.3t.3.75q0 3.225-1.438 6.288t-3.8 5.425q-2.362 2.362-5.425 3.8T4.05 21Z"
+            ></path>
+          </svg> +1-517-6140802
+        </p>
+        <p class="flex leading-6">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M4 20q-.825 0-1.413-.588T2 18V6q0-.825.588-1.413T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.588 1.413T20 20H4Zm8-7l8-5V6l-8 5l-8-5v2l8 5Z"
+            ></path>
+          </svg> m.perez@sefooddepotllc.com
         </p>
       </div>
     </div>
+  </div>
+  <div class="md:flex md:items-center md:justify-between py-4 md:py-8">
+    <div class="text-sm text-gray-700 mr-4 dark:text-slate-400">
+      Made by <a
+        class="text-accent hover:underline"
+        href="https://novanet.studio"
+        target="_blank">Novanet Studio</a
+      >
+      <p>
+        Copyright © {settings.name}
+        {year}
+      </p>
+    </div>
+  </div>
 </footer>
 
 <style>
-  footer  {
+  footer {
     @apply max-w-6xl mx-auto px-4 sm:px-6;
   }
   .ilk-satir {
@@ -122,14 +83,12 @@
     @apply link-primary link-hover hover:text-gray-700 transition duration-150 ease-in-out;
   }
   input {
-    @apply  w-full text-gray-800 px-3 py-2 pr-12 text-sm border focus:border-primary  focus-visible:ring-primary rounded-sm dark:bg-slate-900 dark:border-slate-600;
+    @apply w-full text-gray-800 px-3 py-2 pr-12 text-sm border focus:border-primary  focus-visible:ring-primary rounded-sm dark:bg-slate-900 dark:border-slate-600;
   }
   input:focus-visible {
     --tw-ring-color: red;
-
   }
   [astro-icon="bi:arrow-right"] {
-		@apply w-5 h-5 text-primary-focus mx-3 flex-shrink-0;
-    }
-
+    @apply w-5 h-5 text-primary-focus mx-3 flex-shrink-0;
+  }
 </style>
