--- a/src/components/features/BasicFeatures.astro
+++ b/src/components/features/BasicFeatures.astro
@@ -8,11 +8,11 @@ export interface Props {
 
 const { idA, idB } = Astro.props;
 
-const seaList = `- Needlefish - Swordfish - Sailfish.\n - Tuna - Albacore.\n - Catfish.\n - Tuna Lomo.\n - King Mackerel.\n - White grunt.\n - Mahi-Mahi.\n - Tripletail.\n - Yellowtail - Amberjack.\n - Hake.\n - Yellowedge grouper.\n - Snapper.\n - Wahoo.\n - Snook.\n - Yellow croacker.\n - Ribbon Fish- Belt Fish`;
+const seaList = `- Needlefish - Swordfish - Sailfish\n - Tuna - Albacore\n - Catfish\n - Tuna Lomo\n - King Mackerel\n - White grunt\n - Mahi-Mahi\n - Tripletail\n - Yellowtail - Amberjack\n - Hake\n - Yellowedge grouper\n - Snapper\n - Wahoo\n - Snook\n - Yellow croacker\n - Ribbon Fish- Belt Fish`;
 
-const freshwatweList = `- Pacu.\n - Piranha.\n - Coporo.\n - White Drum.\n - Kwie-Kwie-Hassa.\n - Paiche-Pirarucu.\n - Peacoks Bass.\n - Yellowfin River.\n - Red Tilapia and Tilapia`;
+const freshwatweList = `- Pacu\n - Piranha\n - Coporo\n - White Drum\n - Kwie-Kwie-Hassa\n - Paiche-Pirarucu\n - Peacoks Bass\n - Yellowfin River\n - Red Tilapia and Tilapia`;
 
-const seafoodList = `- Octopus.\n- Spiny Lobster.
+const seafoodList = `- Octopus\n- Spiny Lobster
 `;
 ---
 
