fix: carousel image

--- a/src/components/footers/BasicFooter.astro
+++ b/src/components/footers/BasicFooter.astro
@@ -59,7 +59,7 @@ const year = new Date().getFullYear();
   </div>
   <div class="md:flex md:items-center md:justify-between py-4 md:py-8">
     <div class="text-sm text-gray-700 mr-4 dark:text-slate-400">
-      Made by <a
+      Published by <a
         class="text-accent hover:underline"
         href="https://novanet.studio"
         target="_blank">Novanet Studio</a
